--- a/Cargo.toml
+++ b/Cargo.toml
@@ -24,6 +24,7 @@ sea-orm = { version = "0.12.15", features = [
 migration = { path = "./migration" }
 sqlx = "0.7.1"
 tokio = { version = "1", features = ["full"] }
+uuid = { version = "1.10.0", features = ["v7"] }
 
 [workspace]
 members = [".", "migration"]
